# inventory_management

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
src/: main.py  settings.py
src/commons/: base_exceptions.py  base_model.py  base_repository.py  base_schemas.py
src/database/: db.py
src/database/migrations/: env.py
src/database/migrations/versions/: 8e5c25a1b1db_initial_migration.py
src/tests/: conftest.py
src/utils/: dependencies.py  types.py
